--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,7 @@ main {
 
 .t-h  {
   font-size: 48px;
-  padding-top: 15px;
-  margin: 0px;
+  margin: auto 0px;
   text-align: center;
   font-weight: bolder;
   position: relative;
@@ -47,9 +46,10 @@ main {
     display: block;
     position: relative;
     width: 100%;
-    height: 185px;
+    height: 200px;
     margin: 0 auto 0 auto;
     background-color: var(--hf-bgrd);
+    padding-top: 25px;
 }
 
 footer {
@@ -230,9 +230,10 @@ p {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
   font-size: 15px;
-  padding: 8px 12px;
+  padding: 5px 0px 5px 0px;
   position: absolute;
   bottom: 8px;
   width: 100%;
