--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,7 @@ nav {
 }
 
     nav a {
-        margin-right: 15px;
-        margin-left: 15px;
+        margin: 0px 15px 0px 15px;
         text-decoration: none;
         border: 5px solid var(--Highlight);
         border-radius: 15px;
@@ -157,9 +156,15 @@ label {
     margin: auto 0px auto 0px;
 }
 
+.a-sec {
+  position: relative;
+}
+
 .article {
   display: grid;
-  margin: 50px;
+  max-width: 1100px;
+  align-items: center;
+  margin: 25px auto 25px auto;
   background-color: darkslategray;
   border-radius: 15px;
   grid-template-areas:
@@ -169,7 +174,11 @@ label {
 }
 
 .article p {
-  margin-left: 25px;
+  margin: auto 25px auto 25px;
+}
+
+.article h1 {
+  margin: auto 0px auto 0px;
 }
 
 .a-img {
@@ -259,6 +268,21 @@ p {
   bottom: 8px;
   width: 100%;
   text-align: center;
+}
+
+.caption {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 15px;
+  padding: 5px 0px 5px 0px;
+  position: absolute;
+  bottom: 15px;
+  width: 450px;
+  text-align: center;
+}
+
+.a-img .text {
+  max-width: 450px;
 }
 
 /* Number text (1/3 etc) */
